# Snap-Book

./: .dockerignore  .env.example  Dockerfile  README.md  docker-compose.yml  pyproject.toml
src/api/: auth.py  bookings.py  facilities.py  hotels.py  rooms.py
src/tasks/: tasks.py
tests/: fastapi_load_test.py
