[project]
name = "snap-book"
version = "0.1.0"
description = "Hotel booking service with user authentication, hotel and room management, and booking system."
authors = [
    {name = "guwisu",email = "kolyabelykov@mail.ru"}
]
license = {text = "MIT License"}
readme = "README.md"
requires-python = ">=3.11,<4.0"
dependencies = [
    "fastapi (==0.111.1)",
    "alembic (==1.13.2)",
    "amqp (==5.3.1)",
    "annotated-types (==0.7.0)",
    "anyio (==4.4.0)",
    "async-timeout (==4.0.3)",
    "asyncpg (==0.29.0)",
    "bcrypt (==4.2.0)",
    "billiard (==4.2.1)",
    "black (==24.4.2)",
    "celery (==5.5.3)",
    "certifi (==2024.7.4)",
    "click (==8.1.7)",
    "click-didyoumean (==0.3.1)",
    "click-plugins (==1.1.1.2)",
    "click-repl (==0.3.0)",
    "colorama (==0.4.6)",
    "dnspython (==2.6.1)",
    "email-validator (==2.2.0)",
    "fastapi-cache2 (==0.2.2)",
    "fastapi-cli (==0.0.4)",
    "greenlet (==3.0.3)",
    "h11 (==0.14.0)",
    "httpcore (==1.0.5)",
    "httptools (==0.6.1)",
    "httpx (==0.27.0)",
    "idna (==3.7)",
    "iniconfig (==2.1.0)",
    "jinja2 (==3.1.4)",
    "kombu (==5.5.4)",
    "mako (==1.3.5)",
    "markdown-it-py (==3.0.0)",
    "markupsafe (==2.1.5)",
    "mdurl (==0.1.2)",
    "mypy-extensions (==1.0.0)",
    "nodeenv (==1.9.1)",
    "packaging (==24.1)",
    "passlib (==1.7.4)",
    "pathspec (==0.12.1)",
    "pendulum (==3.1.0)",
    "pillow (==11.2.1)",
    "platformdirs (==4.2.2)",
    "pluggy (==1.6.0)",
    "prompt-toolkit (==3.0.51)",
    "pydantic (==2.8.2)",
    "pydantic-settings (==2.4.0)",
    "pydantic-core (==2.20.1)",
    "pygments (==2.18.0)",
    "pyjwt (==2.9.0)",
    "pyright (==1.1.402)",
    "pytest (==8.4.1)",
    "pytest-asyncio (==1.0.0)",
    "pytest-dotenv (==0.5.2)",
    "python-dateutil (==2.9.0.post0)",
    "python-dotenv (==1.0.1)",
    "python-multipart (==0.0.9)",
    "pyyaml (==6.0.1)",
    "redis (==6.2.0)",
    "rich (==13.7.1)",
    "rich-toolkit (==0.14.8)",
    "ruff (==0.12.2)",
    "shellingham (==1.5.4)",
    "six (==1.17.0)",
    "sniffio (==1.3.1)",
    "sqlalchemy (==2.0.31)",
    "starlette (==0.37.2)",
    "typer (==0.12.3)",
    "typing-inspection (==0.4.1)",
    "typing-extensions (==4.12.2)",
    "tzdata (==2025.2)",
    "uvicorn (==0.30.3)",
    "vine (==5.1.0)",
    "watchfiles (==0.22.0)",
    "wcwidth (==0.2.13)",
    "websockets (==12.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false


[tool.ruff]
line-length = 100
